<resources>
    <string name="app_name">fRead</string>
    <string name="signout_button_text">Sign Out</string>
    <string name="save_article_menu_text">Save Article</string>
    <string name="add_tag_menu_text">Add Tags</string>
    <string name="share_article_menu_text">Share Article</string>
    <string name="menu_text_articles">Articles</string>
    <string name="title_search">Search</string>
    <string name="title_profile">Profile</string>
    <string name="web_view_menu_text">Web View</string>
    <string name="add_tag_hint_text">Enter tag name</string>
    <string name="add_tag_button_text">Add Tag</string>
    <string name="article_keyid_pref">Article Key ID Pref</string>
    <string name="create_tag_text">Create new tag</string>
    <string name="edit_tags_text">Edit tags</string>
    <string name="sign_in_menu_text">Sign In</string>
    <string name="edit_tags_menu_text">Edit Tags</string>
    <string name="delete_menu_text">Delete</string>
    <string name="nav_header_text">My header title</string>
    <string name="articles_menu_text">Articles</string>
    <string name="settings_menu_text">Settings</string>
    <string name="menu_text_tags">Tags</string>
    <string name="empty_widget_text">No Articles to display</string>
    <string name="number_of_articles">(%1$s)</string>
    <string name="empty_number_of_articles">(0)</string>
    <string name="article_toolbar_image">Article toolbar image.</string>
    <string name="snackbar_article_saved">Article saved.</string>
    <string name="snackbar_add_tags">Add Tags</string>
    <string name="delete_article_dialog_title">Delete this article?</string>
    <string name="delete_article_positive_text">Delete</string>
    <string name="delete_article_negative_text">Cancel</string>
</resources>
