<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <group android:id="@+id/main_group_menu">
        <item
            android:id="@+id/article_feed"
            android:icon="@drawable/ic_chrome_reader_mode_white_24dp"
            android:title="@string/articles_menu_text"
            app:showAsAction="never" />
        <item
            android:id="@+id/edit_tags_menu_item"
            android:icon="@drawable/ic_edit_black_24dp"
            android:title="@string/edit_tags_menu_text"
            app:showAsAction="never" />
    </group>


    <group android:id="@+id/settings_group_menu">
        <item
            android:id="@+id/settings_menu_item"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/settings_menu_text"
            app:showAsAction="never" />

    </group>

</menu>